# learn-gen-ai

./: .gitignore  README.md  pyproject.toml
chatbot/: chatbot.py
image-caption/: app.py  caption.py
langchain-basics/: article.txt  chat.py
rag-basics/: app.py
transcoder/: app.py
youtube-summarizer/: app.py
