[project]
name = "learn-gen-ai"
version = "0.1.0"
description = "simple applications using ai tools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.6.3",
    "duckduckgo-search>=7.3.0",
    "gradio>=5.12.0",
    "langchain-chroma>=0.2.1",
    "langchain-community>=0.3.16",
    "langchain-groq>=0.2.4",
    "langchain-ollama>=0.2.3",
    "nltk>=3.9.1",
    "openai-whisper>=20240930",
    "python-dotenv>=1.0.1",
    "streamlit>=1.41.1",
    "torch>=2.5.1",
    "transformers>=4.48.0",
]
